--- a/index.html
+++ b/index.html
@@ -6,23 +6,29 @@
 	<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet">
 </head>
 <body>
+<header>
 	<h1>Memory Game</h1>
+</header>
+<div class="wackiest">
 	<h3>The wackiest game in town!</h3>
-	<p>
+</div>
+	<nav>
 		<a href="#">Instructions</a> / <a href="#">Game</a>
-	</p>
+	</nav>
 	<p>
 		<a class="social">You like?! Tell your friends on <a class="link" href="#">Facebook</a> <a class="link" href="#">Twitter</a>
 	</p>
-		<h2>Instructions</h2>
-		<p>
-			Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
-		</p>
+<main>
+	<h2>Instructions</h2>
+	<p>
+		Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
+	</p>
 <div>
     <img src="images/back.png" alt="Queen of Diamonds">
     <img src="images/back.png" alt="Queen of Hearts">
     <img src="images/back.png" alt="King of Diamonds">
     <img src="images/back.png" alt="King of Hearts">
 </div>
+</main>
 </body>
 </html>
