--- a/index.html
+++ b/index.html
@@ -6,23 +6,30 @@
 	<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet">
 </head>
 <body>
+<header>
 	<h1>Memory Game</h1>
-	<h3>The wackiest game in town!</h3>
+</header>
+	<nav>
+		<a href="#">Instructions</a><span>/</span><a href="#">Game</a>
+	</nav>
 	<p>
-		<a href="#">Instructions</a> / <a href="#">Game</a>
+		<a class="social">You like?! Tell your friends on <a class="link" href="#">Facebook</a><span class="slash"> / </span><a class="link" href="#">Twitter</a>
 	</p>
+<main>
+	<h2>Instructions</h2>
 	<p>
-		<a class="social">You like?! Tell your friends on <a class="link" href="#">Facebook</a> <a class="link" href="#">Twitter</a>
+		Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
 	</p>
-		<h2>Instructions</h2>
-		<p>
-			Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
-		</p>
 <div>
     <img src="images/back.png" alt="Queen of Diamonds">
     <img src="images/back.png" alt="Queen of Hearts">
     <img src="images/back.png" alt="King of Diamonds">
     <img src="images/back.png" alt="King of Hearts">
 </div>
+</main>
 </body>
+	<footer class="clearfix">
+		<p class="copyright">Copyright 2017</p>
+		<p class="message">Created with &hearts; by <span class="name">Jacob Greenwald</span></p>
+	</footer>
 </html>
