--- a/wdi-fundamentals-memorygame/index.html
+++ b/wdi-fundamentals-memorygame/index.html
@@ -32,4 +32,5 @@
 		<p class="copyright">Copyright 2017</p>
 		<p class="message">Created with &hearts; by <span class="name">Jacob Greenwald</span></p>
 	</footer>
+	  <script src="js/main.js"></script>
 </html>
