--- a/wdi-fundamentals-memorygame/index.html
+++ b/wdi-fundamentals-memorygame/index.html
@@ -12,17 +12,16 @@
 	<nav>
 		<a href="#">Instructions</a><span>/</span><a href="#">Game</a>
 	</nav>
-	<p>
-		<a class="social">You like?! Tell your friends on <a class="link" href="#">Facebook</a><span class="slash"> / </span><a class="link" href="#">Twitter</a>
-	</p>
 <main>
 	<h2>Instructions</h2>
 	<p>
 		Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
 	</p>
-
 <div id="game-board" class="board clearfix"></div>
 <button id="resetButton">Reset Board</button>
+	<p>
+	<span class="link">Tell your friends on </span><a class="link" href="#">Facebook</a><span class="slash"> / </span><a class="link" href="#">Twitter</a>
+	</p>
 
 </main>
 </body>
