--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h1>Memory Game</h1>
 </header>
 	<nav>
-		<a href="#">Instructions</a><span>/</span><a href="#">Game</a>
+		<h3>Instructions</h3><span> / </span><h3>Game</h3>
 	</nav>
 <main>
 	<h2>Instructions</h2>
